@@ -5,8 +5,10 @@ NEWS/ChangeLog for hydroGOF
                            This warning raised the message "'sim' and 'obs' are empty or they do not have any common pair of elements with data !!",
                            even when 'sim' and 'obs' were fully compatible.
         o 'pbiasfdc'     : internal: 'hydroTSM::fdc' was replaced by 'fdc' 
-        o 'plotbandsonly': internal: 'hydroTSM::vector2zoo' was replaced by 'zoo' 
-        o 'plot2'        : -) internal: 'hydroTSM::vector2zoo' was replaced by 'zoo' 
+        o 'plotbandsonly': internal: 'hydroTSM::vector2zoo' was replaced by 'vector2zoo' 
+        o 'plot2'        : -) internal: 'hydroTSM::vector2zoo' was replaced by 'vector2zoo' 
+                           -) internal: 'hydroTSM::drawTimeAxis' was replaced by 'drawTimeAxis' 
+        o 'plotbands'    : -) internal: 'hydroTSM::vector2zoo' was replaced by 'vector2zoo' 
                            -) internal: 'hydroTSM::drawTimeAxis' was replaced by 'drawTimeAxis' 
 
 0.3-6	22-Mar-2013
